<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >


    <Button
        android:id="@+id/buttonNovoJogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/novoJogo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonContinuarJogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/continuarJogo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonConfiguracoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/configuracoes"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/buttonSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:text="@string/sair" />

</LinearLayout>