<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jogoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JogoActivity"
    tools:layout_editor_absoluteY="73dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/bemVindo"
        android:textSize="18sp" />

    <Button
        android:id="@+id/teste1"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teste1" />

    <Button
        android:id="@+id/teste2"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teste2"
        android:layout_gravity="center"/>
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="bottom"
        android:src="@mipmap/ic_hexagono_foreground"/>
</FrameLayout>
